...
            onPressed: () async {
              final deleteConfirmed = await showDialog(context: context, builder: (context) {
                return AlertDialog(
                  title: const Text('Delete expense?'),
                  content: Text('${MoneyFormatter.format(_amount)} spent on "$_expenseCategoryName" on ${DateFormatter.format(_occurredOn)}'),
                  actions: [
                    TextButton(onPressed: () => Navigator.pop(context, false), child: const Text('CANCEL')),
                    TextButton(onPressed: () => Navigator.pop(context, true), child: const Text('DELETE'))
                  ],
                );
              });

              if (deleteConfirmed) {
                await _deleteExpense(_id);
...
